src/test/ui/pattern/usefulness/non-exhaustive-float-range-match.stderr
error: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-float-range-match.rs:6:7
   |
LL |       0.0..=1.0 => {}
   |       ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-float-range-match.rs:6:13
   |
LL |       0.0..=1.0 => {}
   |             ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-float-range-match.rs:11:7
   |
LL |       0.0..=1.0 => {}
   |       ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-float-range-match.rs:11:13
   |
LL |       0.0..=1.0 => {}
   |             ^^^

error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/non-exhaustive-float-range-match.rs:10:11
   |
LL |     match 0.0 {
   |           ^^^ pattern `_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-float-range-match.rs:6:7
   |
LL |       0.0..=1.0 => {}
   |       ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-float-range-match.rs:6:13
   |
LL |       0.0..=1.0 => {}
   |             ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-float-range-match.rs:11:7
   |
LL |       0.0..=1.0 => {}
   |       ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-float-range-match.rs:11:13
   |
LL |       0.0..=1.0 => {}
   |             ^^^

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0004`.
